<resources>
    <string name="app_name">RedCalendar</string>

    <string name="step1_title">آخرین روز پریود قبلی چه تاریخی بوده؟</string>
    <string name="step2_title">طول دوره پریود شما به طور معمول چند روز است؟</string>
    <string name="step3_title">فاصله پریودهای شما بطور معمول چند روز است؟</string>
    <string name="step4_title">سندرم پیش از قاعدگی شما چند روز است؟</string>
    <string name="step5_title">متولد چه سالی هستید؟</string>

    <string name="step1_fractionTitle">مرحله اول از پنج مرحله</string>
    <string name="step2_fractionTitle">مرحله دوم از پنج مرحله</string>
    <string name="step3_fractionTitle">مرحله سوم از پنج مرحله</string>
    <string name="step4_fractionTitle">مرحله چهارم از پنج مرحله</string>
    <string name="step5_fractionTitle">مرحله پنجم از پنج مرحله</string>

    <string name="next_question">سوال بعدی</string>
    <string name="login_to_app">ورود به برنامه</string>
    <string name="forget">فراموش کرده‌اید؟</string>
    <string name="choose_birth_date">سال تولد را انتخاب کنید</string>
    <string name="day">روز</string>
    <string name="choose_days">تعداد روز را انتخاب کنید</string>
    <string name="addInformation">اضافه‌کردن اطلاعات</string>
    <string name="change_cycle_days">تغییر روزهای پریود</string>
    <string name="step2_forget_text">میانگین جهانی طول دوره پریود 4 روز می‌باشد که به صورت پیش فرض برای شما انتخاب می‌شود. می‌توانید با مراجعه به حساب کاربری آن را تغییر دهید.</string>
    <string name="step3_forget_text">میانگین جهانی فاصله  بین دو دوره 24 روز می‌باشد که به صورت پیش فرض برای شما انتخاب می‌شود. می‌توانید با مراجعه به حساب کاربری آن را تغییر دهید.</string>
    <string name="step4_forget_text">میانگین جهانی سندرم پیش از قاعدگی 3 روز می‌باشد که به صورت پیش فرض برای شما انتخاب می‌شود. می‌توانید با مراجعه به حساب کاربری آن را تغییر دهید.</string>
    <string name="apply_changes">ثبت تغییرات</string>
    <string name="yellow_info_title">سندرم پیش از قاعدگی</string>
    <string name="red_info_title">دوره پریود</string>
    <string name="green_info_title">دوره تخمک گذاری</string>
    <string name="green2_info_title">دوره تخمک‌ گذاری</string>
    <string name="pms_days">سندرم پیش از قاعدگی</string>
    <string name="gray_days">فاصله بین دو دوره</string>
    <string name="red_days">طول دوره</string>
    <string name="birth_year">سال تولد</string>
    <string name="current_cycle">دوره فعلی</string>
    <string name="make_report_for_doctor">گزارش‌گیری برای پزشک</string>
    <string name="clear_data">حذف اطلاعات از برنامه</string>
    <string name="about_us">درباره ما</string>
    <string name="share_app">اشتراک گذاری برنامه</string>
    <string name="show_cycle_days_on_calendar">نمایش روزهای دوره روی تقویم</string>
    <string name="show_pregnancy_prob">نمایش احتمال باردار‌ شدن</string>
    <string name="set_date">انتخاب تاریخ</string>
    <string name="choose_day">انتخاب روز</string>
    <string name="weight">وزن</string>
    <string name="apply">تائید</string>
    <string name="drugs">داروهای مصرفی</string>
    <string name="add_to_list">اضافه به لیست</string>
    <string name="time_range">بازه‌ی زمانی</string>
    <string name="start_from">از تاریخ</string>
    <string name="end_range">تا تاریخ</string>
    <string name="report_options">موارد ارسالی</string>
    <string name="bleeding_option">شدت خونریزی</string>
    <string name="eating_deire_option">میل به خوردن</string>
    <string name="emotion_option">احساسات</string>
    <string name="hair_style_option">حالت موها</string>
    <string name="pain_option">احساس درد</string>
    <string name="weight_option">وزن</string>
    <string name="drug_option">داروهای مصرفی</string>
    <string name="make_report">ارسال گزارش</string>
    <string name="force_update_api_key">talebzarheshtokendarekashkimanammidashtam</string>
</resources>
