<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.main.ProfileFragment">

    <com.simorgh.cyclebar.CycleBar
        android:id="@+id/cycleBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:borderColor="#00819b"
        app:greenTypeColor="#669933"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_CurrentCycleStartEnd"
        app:redTypeColor="#f84d60"
        app:todayColor="#00819b"
        app:totalDaysTextColor="#5c5c5c" />

    <TextView
        android:id="@+id/tv_current_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/current_cycle"
        android:textColor="#00819b"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_CurrentCycleStartEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:textColor="#5c5c5c"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_current_cycle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_current_cycle"
        tools:fontFamily="@font/iransans_medium"
        tools:text="27 آذر - 20 دی" />

    <TextView
        android:id="@+id/tv_red_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/red_days"
        android:textColor="#00819b"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycleBar"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_gray_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/gray_days"
        android:textColor="#00819b"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_red_count"
        tools:fontFamily="@font/iransans_medium" />


    <TextView
        android:id="@+id/tv_yellow_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/pms_days"
        android:textColor="#00819b"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gray_count"
        tools:fontFamily="@font/iransans_medium" />

    <TextView
        android:id="@+id/tv_birth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/birth_year"
        android:textColor="#00819b"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_yellow_count"
        tools:fontFamily="@font/iransans_medium" />

    <com.simorgh.spinner.NiceSpinner
        android:id="@+id/spinnerRedCount"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/spinner_style"
        android:gravity="start|center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="12sp"
        app:addToTextStart="false"
        app:extraText="روز"
        app:layout_constraintBottom_toBottomOf="@+id/tv_red_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_red_count"
        app:textTint="#5c5c5c" />

    <com.simorgh.spinner.NiceSpinner
        android:id="@+id/spinnerGrayCount"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/spinner_style"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="12sp"
        app:addToTextStart="false"
        app:extraText="روز"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gray_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_gray_count"
        app:textTint="#5c5c5c" />

    <com.simorgh.spinner.NiceSpinner
        android:id="@+id/spinnerYellowCount"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/spinner_style"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="12sp"
        app:addToTextStart="false"
        app:extraText="روز"
        app:layout_constraintBottom_toBottomOf="@+id/tv_yellow_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_yellow_count"
        app:textTint="#5c5c5c" />

    <com.simorgh.spinner.NiceSpinner
        android:id="@+id/spinnerBirthYear"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/spinner_style"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="12sp"
        app:addToTextStart="true"
        app:extraText="سال"
        app:layout_constraintBottom_toBottomOf="@+id/tv_birth_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_birth_year"
        app:textTint="#5c5c5c" />
</androidx.constraintlayout.widget.ConstraintLayout>